more configuration system improvements

--- a/examples/common/platforms-emu.conf
+++ b/examples/common/platforms-emu.conf
@@ -1,28 +1,7 @@
 
 # EMU
 
-%section emu-linux-*
-  %types host_os
-
-  CONFIG_ARCH_EMU_LINUX
-
-%section emu-darwin-*
-  %types host_os
-
-  CONFIG_ARCH_EMU_DARWIN
-
-%section emu-*-x86_64
-  %types emu_cpu
-
-  CONFIG_CPU_X86_64_EMU
-
-%section emu-*-x86
-  %types emu_cpu
-
-  CONFIG_CPU_X86_EMU
-
 %section emu-*-*
-  %requiretypes host_os emu_cpu
   %types architecture
 
   CONFIG_ARCH_EMU
@@ -33,3 +12,38 @@
   CONFIG_ARCH_HW_INIT
   CONFIG_DRIVER_CHAR_EMUTTY
   CONFIG_CPU_RESET_HANDLER undefined
+
+  #################################################
+  # Host OS
+
+  %subsection emu-linux-*
+    %types host_os
+  
+    CONFIG_ARCH_EMU_LINUX
+  %end
+  
+  %subsection emu-darwin-*
+    %types host_os
+  
+    CONFIG_ARCH_EMU_DARWIN
+  %end
+  
+  #################################################
+  # CPUs
+
+  %subsection emu-*-x86_64
+    %types cpu
+  
+    CONFIG_CPU_X86_64_EMU
+  %end
+  
+  %subsection emu-*-x86
+    %types cpu
+  
+    CONFIG_CPU_X86_EMU
+  %end
+
+  %requiretypes host_os cpu
+
+  %set BUILD_NAME emu
+
