--- a/examples/common/platforms-ibmpc.conf
+++ b/examples/common/platforms-ibmpc.conf
@@ -5,19 +5,19 @@
 
   CONFIG_ARCH_IBMPC
   CONFIG_SMP
-  CONFIG_CPU_MAXCOUNT 4
+  CONFIG_CPU_MAXCOUNT 8
 
   CONFIG_DRIVER_CHAR_VGATTY
   CONFIG_DRIVER_ICU_8259
 
   CONFIG_CPU_RESET_HANDLER
 
-%section ibmpc-x86
-  %types cpu
+  %subsection ibmpc-x86
+    %types cpu
+  
+    CONFIG_CPU_X86
+    %set BUILD_NAME ibmpc-x86
+  %end
 
-  CONFIG_CPU_X86
+  %requiretypes cpu
 
-%section ibmpc-x86_64
-  %types cpu
-
-  CONFIG_CPU_X86
