--- a/examples/common/platforms-simple.conf
+++ b/examples/common/platforms-simple.conf
@@ -1,29 +1,6 @@
 
-%section sam7ex256
-  %types simple_platform
-
-  CONFIG_ARCH_SIMPLE_SAM7X256
-
-  CONFIG_DRIVER_ICU_ARM undefined
-
-  CONFIG_DRIVER_BLOCK_SD_MMC
-  CONFIG_DRIVER_ICU_SAM7
-  CONFIG_DRIVER_GPIO_SAM7
-  CONFIG_DRIVER_INPUT_MT5F
-  CONFIG_DRIVER_TIMER_PITC_6079A
-
-  CONFIG_DRIVER_CHAR_US6089C_UART
-  CONFIG_DRIVER_SPI_SPI6088D
-#  CONFIG_DRIVER_I2C_TWI6061A
-
-%section simple-arm
-  %types simple_cpu
-  CONFIG_CPU_ARM
-#  CONFIG_CPU_ARM_THUMB
-
 %section simple-*
-  %types architecture arch_simple
-  %requiretypes simple_platform simple_cpu
+  %types architecture
 
   # Platform types
   CONFIG_ARCH_SIMPLE
@@ -32,12 +9,50 @@
 
   CONFIG_COMPILE_OPTIMIZE s
 
-%section jtag
-  CONFIG_DRIVER_CHAR_SAM7DBGU
+  #################################################
+  # CPUs
 
-%section lcd-pcf8833
-  provide CONFIG_DRIVER_LCD_PCF8833
+  %subsection simple-arm
+    %types cpu
+    CONFIG_CPU_ARM
+  #  CONFIG_CPU_ARM_THUMB
+  %end
 
-%section lcd-s1d1g00
-  provide CONFIG_DRIVER_LCD_S1D15G00
+  #################################################
+  # platforms
+
+  %subsection pf-sam7ex256
+    %types platform
+  
+    CONFIG_ARCH_SIMPLE_SAM7X256
+  
+    CONFIG_DRIVER_ICU_ARM undefined
+  
+    CONFIG_DRIVER_BLOCK_SD_MMC
+    CONFIG_DRIVER_ICU_SAM7
+    CONFIG_DRIVER_GPIO_SAM7
+    CONFIG_DRIVER_INPUT_MT5F
+    CONFIG_DRIVER_TIMER_PITC_6079A
+  
+    CONFIG_DRIVER_CHAR_US6089C_UART
+    CONFIG_DRIVER_SPI_SPI6088D
+    # CONFIG_DRIVER_I2C_TWI6061A
+
+    %subsection jtag
+      CONFIG_DRIVER_CHAR_SAM7DBGU
+    %end
+
+    %subsection lcd-pcf8833
+      provide CONFIG_DRIVER_LCD_PCF8833
+    %end
+
+    %subsection lcd-s1d1g00
+      provide CONFIG_DRIVER_LCD_S1D15G00
+    %end
+
+    %set BUILD_NAME sam7ex256
+
+  %end
+
+  %requiretypes platform cpu
 
