--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -5,8 +5,8 @@
 desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
-require CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
-single  CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
+require CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+single  CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
 %config end
 
 %config CONFIG_MUTEK_MAIN
@@ -147,6 +147,13 @@ desc Incremental memory allocation without freeing.
 default undefined
 %config end
 
+%config CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+desc Enable use of experimental memory allocation algorithm.
+default undefined
+require CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
+single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
+%config end
+
 %config CONFIG_MUTEK_MEMALLOC_SMART
 desc Enable use of memory allocation algorithm.
 default undefined
@@ -156,13 +163,13 @@ single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
 
 %config CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT
 desc select memory allocation algorithm first fit
-parent CONFIG_MUTEK_MEMALLOC_SMART
+parent CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
 default defined
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
 desc select memory allocation algorithm best fit
-parent CONFIG_MUTEK_MEMALLOC_SMART
+parent CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
 default undefined
 %config end
 
@@ -181,9 +188,11 @@ desc keep stats about allocated blocks count and size
 depend CONFIG_MUTEK_MEMALLOC_SMART
 %config end
 
-%config CONFIG_MUTEK_MEMALLOC_SIGNED
-desc When enabled all memory block headers will include a special magic value
+%config CONFIG_MUTEK_MEMALLOC_CRC
+desc When enabled all memory block headers will include a CRC32
 depend CONFIG_MUTEK_MEMALLOC_SMART
+provide CONFIG_LIBCRYPTO_CRC32
+depend CONFIG_LIBCRYPTO
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_GUARD
