--- a/examples/hello_het/config
+++ b/examples/hello_het/config
@@ -1,6 +1,8 @@
 
+  %set OUTPUT_NAME hello_het
+
 # New source code module to be compiled
-  CONFIG_MODULES +hello_het:$(CONFIGPATH)
+  CONFIG_MODULES +$(OUTPUT_NAME):$(CONFIGPATH)
 
 # Application license
   CONFIG_LICENSE_APP_LGPL
@@ -9,6 +11,7 @@
   CONFIG_MUTEK_CONSOLE
   CONFIG_MUTEK_SCHEDULER_MIGRATION
   CONFIG_MUTEK_MEMALLOC_SMART
+  CONFIG_MUTEK_SMP_APP_START
 
 # Libs
   CONFIG_PTHREAD
