--- a/examples/libtermui_liblua/config
+++ b/examples/libtermui_liblua/config
@@ -1,5 +1,5 @@
 
-  %set OUTPUT_NAME mjpeg_het
+  %set OUTPUT_NAME libtermui_liblua
 
 # New source code module to be compiled
   CONFIG_MODULES +$(OUTPUT_NAME):$(CONFIGPATH)
@@ -9,15 +9,12 @@
 
 # Mutek features
   CONFIG_MUTEK_CONSOLE
-  CONFIG_MUTEK_SCHEDULER_MIGRATION
   CONFIG_MUTEK_MEMALLOC_SMART
-  CONFIG_MUTEK_SMP_APP_START
 
 # Libs
-  CONFIG_PTHREAD
-  CONFIG_HEXO_INTTYPES_DEPRECATED undefined
-  CONFIG_LIBC_STREAM_STD undefined
+  CONFIG_LIBTERMUI
+  CONFIG_LIBLUA
 
 %include ../common/build_options.conf
-%include ../common/platforms-soclib.conf
+%include ../common/platforms.conf
 
