droped config fallback command, config indent, default to CONFIG_ARCH_HW_INIT

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -1,96 +1,97 @@
 
 %config CONFIG_SMP
-desc Support multi-processors systems
-default undefined
-when CONFIG_CPU_MAXCOUNT>1
+  desc Support multi-processors systems
+  default undefined
+  when CONFIG_CPU_MAXCOUNT>1
 %config end
 
 %config CONFIG_CLUSTER
-desc Support multi-clusters systems
-default undefined
-depend CONFIG_SMP
+  desc Support multi-clusters systems
+  default undefined
+  depend CONFIG_SMP
 %config end
 
 ######################################################################
 
 %config CONFIG_ARCH_META
-desc	meta configuration token used to impose requirements
-default defined
-flags	mandatory noexport nodefine
-require	CONFIG_ARCH_NAME
-single	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
+  desc	meta configuration token used to impose requirements
+  default defined
+  flags	mandatory noexport nodefine
+  require	CONFIG_ARCH_NAME
+  single	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
 
-single	CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
-require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
+  single	CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
+  require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
 %config end
 
 # Makefile variable
 
 %config CONFIG_RAM_ADDR
-desc RAM memory base address on this platform
-flags value
-require CONFIG_RAM_SIZE
+  desc RAM memory base address on this platform
+  flags value
+  require CONFIG_RAM_SIZE
 %config end
 
 %config CONFIG_RAM_SIZE
-desc RAM memory size in bytes on this platform
-flags value
-require CONFIG_RAM_ADDR
+  desc RAM memory size in bytes on this platform
+  flags value
+  require CONFIG_RAM_ADDR
 %config end
 
 %config CONFIG_ROM_ADDR
-desc ROM memory base address on this platform
-flags value
-require CONFIG_ROM_SIZE
+  desc ROM memory base address on this platform
+  flags value
+  require CONFIG_ROM_SIZE
 %config end
 
 %config CONFIG_ROM_SIZE
-desc ROM memory size in bytes on this platform
-flags value
-require CONFIG_ROM_ADDR
+  desc ROM memory size in bytes on this platform
+  flags value
+  require CONFIG_ROM_ADDR
 %config end
 
 %config CONFIG_HETROM_ADDR
-desc Heterogeneous code ROM memory base address on this platform
-flags value
-require CONFIG_HETROM_SIZE
+  desc Heterogeneous code ROM memory base address on this platform
+  flags value
+  require CONFIG_HETROM_SIZE
 %config end
 
 %config CONFIG_HETROM_SIZE
-desc Heterogeneous code ROM memory size in bytes on this platform
-flags value
-require CONFIG_HETROM_ADDR
+  desc Heterogeneous code ROM memory size in bytes on this platform
+  flags value
+  require CONFIG_HETROM_ADDR
 %config end
 
 %config CONFIG_DATA_FROM_ROM
-desc Whether we have to copy .data from Rom/Flash to Ram before init
-default defined
+  desc Whether we have to copy .data from Rom/Flash to Ram before init
+  default defined
 %config end
 
 %config CONFIG_ARCH_HW_INIT
-desc Whether arch provides a arch_hw_init() function
-default undefined
+  desc Whether arch provides a arch_hw_init() function
+  default undefined
+  when CONFIG_ARCH_HW_INIT_USER! CONFIG_ARCH_DEVICE_TREE!
 %config end
 
 %config CONFIG_ARCH_HW_INIT_USER
-desc Whether user provides a user_hw_init() function
-default undefined
+  desc Whether user provides a user_hw_init() function
+  default undefined
 %config end
 
 %config CONFIG_ARCH_DEVICE_TREE
-desc Whether we use a fdt tree
-default undefined
-depend CONFIG_DEVICE_TREE
-depend CONFIG_DRIVER_ENUM_ROOT
-depend CONFIG_DRIVER_ENUM_FDT
-depend CONFIG_FDT
+  desc Whether we use a fdt tree for devices enumeration
+  default undefined
+  depend CONFIG_DEVICE_TREE
+  depend CONFIG_DRIVER_ENUM_ROOT
+  depend CONFIG_DRIVER_ENUM_FDT
+  depend CONFIG_FDT
 %config end
 
 ######################################################################
 # Provided token, not definable by user directly
 
 %config CONFIG_ARCH_NAME
-desc	Platform name configuration token
-flags	nodefine value
+  desc	Platform name configuration token
+  flags	nodefine value
 %config end
 
