buildtest and minor .config fixes

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -3,6 +3,7 @@
   desc Support multi-processors systems
   default undefined
   when CONFIG_CPU_MAXCOUNT>1
+  suggest CONFIG_CPU_MAXCOUNT>1
 %config end
 
 %config CONFIG_CLUSTER
@@ -17,10 +18,10 @@
   desc	meta configuration token used to impose requirements
   default defined
   flags	mandatory noexport nodefine
-  require	CONFIG_ARCH_NAME
-  single	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
+  require CONFIG_ARCH_NAME
+  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
 
-  single	CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
+  single CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
   require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
 %config end
 
