--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -2,20 +2,22 @@
 ######################################################################
 # User definable tokens
 
-%config CONFIG_CPU_MIPS32EL
+%config CONFIG_CPU_MIPS32EL_SOCLIB
   desc Little endian Mips32 processor
   parent CONFIG_CPU_MIPS
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_MIPS_VERSION=32
   provide CONFIG_CPU_NAME=mips32el
+  provide CONFIG_CPU_CACHE
 %config end
 
-%config CONFIG_CPU_MIPS32EB
+%config CONFIG_CPU_MIPS32EB_SOCLIB
   desc Big endian Mips32 processor
   parent CONFIG_CPU_MIPS
   provide CONFIG_CPU_ENDIAN_BIG
   provide CONFIG_CPU_MIPS_VERSION=32
   provide CONFIG_CPU_NAME=mips32eb
+  provide CONFIG_CPU_CACHE
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O32
@@ -51,13 +53,12 @@
   module cpu Hexo
   default undefined
 
-  when CONFIG_CPU_MIPS32EL
-  when CONFIG_CPU_MIPS32EB
+  when CONFIG_CPU_MIPS32EL_SOCLIB
+  when CONFIG_CPU_MIPS32EB_SOCLIB
 
   require CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 CONFIG_CPU_MIPS_ABI_EABI
   single CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 CONFIG_CPU_MIPS_ABI_EABI
   require CONFIG_CPU_MIPS_VERSION
-  provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_RESET_ADDR=0xbfc00000
   provide CONFIG_CPU_RESET_SIZE=0x2000
   provide CONFIG_CPU_SIZEOF_INT=4
