--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -5,7 +5,7 @@
 %config CONFIG_CPU_PPC_SOCLIB
   desc SoCLib PowerPc 405
   parent CONFIG_CPU_PPC
-  require	CONFIG_ARCH_SOCLIB
+  require CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
   require CONFIG_COMPILE_SOFTFLOAT
@@ -17,11 +17,12 @@
 
 %config CONFIG_CPU_PPC
   desc PowerPC processors support
+  flags nodefine
 
   when CONFIG_CPU_PPC_SOCLIB
 
   module cpu Hexo
-  require	CONFIG_ARCH_SOCLIB
+  require CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_NAME=ppc
   provide CONFIG_CPU_RESET_ADDR=0xffffff80
   provide CONFIG_CPU_RESET_SIZE=0x80
