--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -22,14 +22,14 @@
   %subsection soclib-mips32el soclib-mipsel soclib-mips
     %types cpu
 
-    CONFIG_CPU_MIPS32EL
+    CONFIG_CPU_MIPS32EL_SOCLIB
     %set BUILD_NAME soclib-mips32el
   %end
 
   %subsection soclib-mips32eb soclib-mipseb
     %types cpu
 
-    CONFIG_CPU_MIPS32EB
+    CONFIG_CPU_MIPS32EB_SOCLIB
     %set BUILD_NAME soclib-mips32eb
   %end
 
