--- a/scripts/global.config
+++ b/scripts/global.config
@@ -20,12 +20,13 @@
 
 %config CONFIG_COMPILE_DEBUG
   desc Enable compiler debug switch
+  suggest CONFIG_COMPILE_OPTIMIZE=0
 %config end
 
 %config CONFIG_COMPILE_OPTIMIZE
   desc Set compiler optimize switch value (0, 1, 2, 3, s)
   default 2
-  flags mandatory
+  flags mandatory value
 %config end
 
 %config CONFIG_COMPILE_FRAMEPTR
