kernel libc fd array is not dynamic anymore

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -29,8 +29,16 @@
 
 %config CONFIG_LIBC_STREAM_BUFFER_SIZE
   desc C library default buffer size for streams
+  flags value
   parent CONFIG_LIBC_STREAM
   default 256
+%config end
+
+%config CONFIG_LIBC_MAX_FD
+  desc C library maximal file descriptors count
+  flags value
+  parent CONFIG_LIBC
+  default 32
 %config end
 
 %config CONFIG_LIBC_STREAM_STD
