CONFIG_MUTEK_MEMALLOC_DEBUG changes for CONFIG_MUTEK_MEMALLOC_SCRAMBLE

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -205,8 +205,14 @@
   parent CONFIG_MUTEK
 %config end
 
-%config CONFIG_MUTEK_MEMALLOC_DEBUG
+%config CONFIG_MUTEK_MEMALLOC_SCRAMBLE
   desc When enabled all allocated and freed memory blocks will filled be with 0x5a and 0xa5 bytes
+  when CONFIG_DEBUG
+  parent CONFIG_MUTEK
+%config end
+
+%config CONFIG_MUTEK_MEMALLOC_SCRAMBLE_INIT
+  desc When enabled regions will filled be with 0x5a bytes
   when CONFIG_DEBUG
   parent CONFIG_MUTEK
 %config end
