Spawn a file for common vfs options

--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -80,6 +80,28 @@
     CONFIG_DRIVER_BLOCK_SOCLIB
     CONFIG_DRIVER_TIMER_SOCLIB
   %end
+  
+  %subsection pf-doom
+    %types platform
+  
+    %notice Targetting DOOM caba/tlmdt platform
+  
+    # Memory layout
+    CONFIG_RAM_ADDR 0x7f000000
+    CONFIG_RAM_SIZE 0x01000000
+    CONFIG_ROM_ADDR 0x60000000
+    CONFIG_ROM_SIZE 0x00100000
+  
+    CONFIG_SOCLIB_EARLY_CONSOLE 0xd0200000
+    CONFIG_MODULES +pf_def:$(CONFIGPATH)
+    %set platform_name pf_doom
+  
+    # Device and drivers
+    CONFIG_DRIVER_CHAR_SOCLIBTTY
+    CONFIG_DRIVER_ICU_SOCLIB
+    CONFIG_DRIVER_BLOCK_RAMDISK
+    CONFIG_DRIVER_FB_SOCLIB
+  %end
 
   # Heterogeneous SoCLib platform
 
