--- a/examples/common/build_options.conf
+++ b/examples/common/build_options.conf
@@ -2,26 +2,19 @@
 %section assert
   CONFIG_LIBC_ASSERT
 
-
 %section debug
-
   CONFIG_DEBUG
 
 %else
-
   CONFIG_COMPILE_OPTIMIZE 2
 
-
 %section release
-
   CONFIG_DEBUG undefined
   CONFIG_LIBC_ASSERT undefined
   CONFIG_COMPILE_DEBUG undefined
 
 %else
-
   CONFIG_COMPILE_DEBUG
-
 
 %section memcheck
   CONFIG_SOCLIB_MEMCHECK
@@ -32,5 +25,5 @@
 %section savetemps
   CONFIG_COMPILE_SAVETEMPS
 
-%section verbose_vfs
-  CONFIG_VFS_VERBOSE
+%section thumb
+  CONFIG_CPU_ARM_THUMB
