--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -55,6 +55,12 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_INTTYPES_SMALL
+  desc Use shortest possible integer types for int_fast*_t and uint_fast*_t types instead of optimal ones
+  when CONFIG_COMPILE_OPTIMIZE=s
+  parent CONFIG_HEXO
+%config end
+
 ######################################################################
 # Provided token, not definable by user directly
 
