Fix EMU for Darwin

--- a/examples/common/platforms-emu.conf
+++ b/examples/common/platforms-emu.conf
@@ -26,6 +26,7 @@
     %types host_os
   
     CONFIG_ARCH_EMU_DARWIN
+    CONFIG_ARCH_SMP undefined
   %end
   
   #################################################
