--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -6,3 +6,55 @@
   provide CONFIG_LICENSE_USE_GPL
 %config end
 
+%config CONFIG_LIBTERMUI_CONSOLE
+  desc Enable libtermui console user interface feature
+  parent CONFIG_LIBTERMUI
+  default defined
+%config end
+
+%config CONFIG_LIBTERMUI_CON_ACL
+  desc Enable console access control
+  parent CONFIG_LIBTERMUI_CONSOLE
+  default defined
+%config end
+
+%config CONFIG_LIBTERMUI_CON_ALIAS
+  desc Enable console command aliases
+  parent CONFIG_LIBTERMUI_CONSOLE
+  default defined
+%config end
+
+%config CONFIG_LIBTERMUI_CON_COMPLETION
+  desc Enable console completion
+  parent CONFIG_LIBTERMUI_CONSOLE
+  default defined
+%config end
+
+%config CONFIG_LIBTERMUI_CON_LONG_HELP
+  desc Retains long help strings
+  suggest_when CONFIG_COMPILE_OPTIMIZE=s
+  parent CONFIG_LIBTERMUI_CONSOLE
+%config end
+
+%config CONFIG_LIBTERMUI_CON_MAXCMDLEN
+  default 16
+  parent CONFIG_LIBTERMUI_CONSOLE
+  flags value
+%config end
+
+%config CONFIG_LIBTERMUI_CON_MAXCOMPLETE
+  default 512
+  parent CONFIG_LIBTERMUI_CONSOLE
+  flags value
+%config end
+
+%config CONFIG_LIBTERMUI_CON_MAXLINELEN
+  default 512
+  parent CONFIG_LIBTERMUI_CONSOLE
+  flags value
+%config end
+
+%config CONFIG_LIBTERMUI_GETLINE
+  parent CONFIG_LIBTERMUI
+%config end
+
