--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -225,7 +225,7 @@
 
 %config CONFIG_MUTEK_MEMALLOC_CRC
   desc When enabled all memory block headers will include a CRC32
-  depend CONFIG_MUTEK_MEMALLOC_SMART
+  depend CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
   when CONFIG_DEBUG
   depend CONFIG_LIBCRYPTO_CRC32
   parent CONFIG_MUTEK
@@ -234,8 +234,8 @@
 %config CONFIG_MUTEK_MEMALLOC_GUARD
   desc Add a guard zone before and after each allocated block.
   desc All guard zone content can be check with the mem_guard_check() function to detect bad memory write access.
-  depend CONFIG_MUTEK_MEMALLOC_SMART
-  depend CONFIG_MUTEK_MEMALLOC_SCRAMBLE
+  depend CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+  when CONFIG_DEBUG
   suggest CONFIG_MUTEK_MEMALLOC_ALIGN=1
   require CONFIG_MUTEK_MEMALLOC_GUARD_SIZE
   parent CONFIG_MUTEK
