--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -6,10 +6,15 @@
   provide CONFIG_LICENSE_USE_GPL
 %config end
 
+%config CONFIG_LIBTERMUI_GETLINE
+  desc Enable the readline() like feature
+  default defined
+  parent CONFIG_LIBTERMUI
+%config end
+
 %config CONFIG_LIBTERMUI_CONSOLE
   desc Enable libtermui console user interface feature
   parent CONFIG_LIBTERMUI
-  default defined
 %config end
 
 %config CONFIG_LIBTERMUI_CON_ACL
@@ -34,6 +39,7 @@
   desc Retains long help strings
   suggest_when CONFIG_COMPILE_OPTIMIZE=s
   parent CONFIG_LIBTERMUI_CONSOLE
+  default defined
 %config end
 
 %config CONFIG_LIBTERMUI_CON_MAXCMDLEN
@@ -52,9 +58,5 @@
   default 512
   parent CONFIG_LIBTERMUI_CONSOLE
   flags value
-%config end
-
-%config CONFIG_LIBTERMUI_GETLINE
-  parent CONFIG_LIBTERMUI
 %config end
 
