moved fileops_s in mutek/fileops.h, added mutek/console.h

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -7,7 +7,8 @@ rand.o						\
 error.o						\
 qsort.o						\
 stdlib.o					\
-unistd.o
+unistd.o					\
+fileops.c
 
 ifeq ($(CONFIG_LIBC_ASSERT), defined)
 objs += assert.o
@@ -17,11 +18,7 @@ ifeq ($(CONFIG_LIBC_STREAM), defined)
 objs += stdio.o
 endif
 
-ifeq ($(CONFIG_LIBC_STREAM_STD), defined)
-objs += stdio_in_out_err.o
-endif
-
 doc_headers = \
-	sys/stat.h fileops.h ctype.h unistd.h	\
+	sys/stat.h ctype.h unistd.h	\
 	semaphore.h fcntl.h errno.h stdio.h time.h stdarg.h	\
 	stddef.h stdint.h stdlib.h setjmp.h string.h assert.h limits.h
