removed void*priv arg for cpu_interrupt_sethandler, cleaned up cpu irq code, factored handler pointers in hexo common part

--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -12,6 +12,7 @@
   provide CONFIG_CPU_AVR_IRQ_COUNT=28
   provide CONFIG_CPU_AVR_GCCMCU=atmega128
   provide CONFIG_CPU_AVR_ENHANCED
+  provide CONFIG_CPU_WAIT_IRQ
 %config end
 
 ######################################################################
