--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -30,11 +30,6 @@
   flags value
 %config end
 
-%config CONFIG_CPU_USER
-  parent CONFIG_CPU_META
-  desc Enable processor user privilege level support
-%config end
-
 ######################################################################
 # Provided token, not definable by user directly
 
@@ -86,6 +81,12 @@
 %config CONFIG_CPU_NONALIGNED_ACCESS
   parent CONFIG_CPU_META
   desc Non-aligned memory access are supported by processor without special handling
+  flags nodefine value
+%config end
+
+%config CONFIG_CPU_WAIT_IRQ
+  parent CONFIG_CPU_META
+  desc The processor has a wait for interrupts instruction available
   flags nodefine value
 %config end
 
