--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -9,6 +9,7 @@
   provide CONFIG_CPU_MIPS_VERSION=32
   provide CONFIG_CPU_NAME=mips32el
   provide CONFIG_CPU_CACHE
+  provide CONFIG_CPU_WAIT_IRQ
 %config end
 
 %config CONFIG_CPU_MIPS32EB_SOCLIB
@@ -18,6 +19,7 @@
   provide CONFIG_CPU_MIPS_VERSION=32
   provide CONFIG_CPU_NAME=mips32eb
   provide CONFIG_CPU_CACHE
+  provide CONFIG_CPU_WAIT_IRQ
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O32
