--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -12,6 +12,7 @@
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_HEXO_MMU_PAGESIZE=4096
   provide CONFIG_CPU_NONALIGNED_ACCESS
+  provide CONFIG_CPU_WAIT_IRQ
   parent CONFIG_CPU_META
 %config end
 
