--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -2,18 +2,15 @@
 objs =						\
 cpu.o						\
 init.o						\
-context.o
+context.o					\
+interrupt.o
 
 ifeq ($(CONFIG_HEXO_IPI), defined)
 objs += ipi.o
 endif
 
-ifeq ($(CONFIG_CPU_USER), defined)
+ifeq ($(CONFIG_HEXO_USERMODE), defined)
 objs += user_mode.o
-endif
-
-ifeq ($(CONFIG_HEXO_IRQ), defined)
-objs += interrupt.o
 endif
 
 doc_headers = \
