--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -15,7 +15,13 @@
 %config CONFIG_HEXO_IPI
   desc Inter processor interrupts support
   depend CONFIG_ARCH_SMP
+  depend CONFIG_CPU_WAIT_IRQ
   parent CONFIG_HEXO
+%config end
+
+%config CONFIG_HEXO_USERMODE
+  parent CONFIG_HEXO
+  desc Enable processor user privilege level support
 %config end
 
 %config CONFIG_HEXO_MMU
