--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -9,6 +9,7 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_ARM_TLS_IN_C15
   provide CONFIG_CPU_ARM_ARCH=armv6k
+  provide CONFIG_CPU_WAIT_IRQ
   require CONFIG_COMPILE_SOFTFLOAT
 %config end
 
