--- a/examples/splash_fft/config
+++ b/examples/splash_fft/config
@@ -1,4 +1,4 @@
-  %set OUTPUT_NAME hello
+  %set OUTPUT_NAME splash_fft
 
   # New source code module to be compiled
   %append MODULES $(OUTPUT_NAME):$(CONFIGPATH)
@@ -8,7 +8,6 @@
 
   CONFIG_COMPILE_SOFTFLOAT
   # Mutek features
-  CONFIG_HEXO_IPI undefined
   CONFIG_HEXO_INTTYPES_DEPRECATED undefined
   CONFIG_LIBC_STREAM_STD
   CONFIG_LIBM
