SMP support for emu/linux is working

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -27,6 +27,7 @@
 %config CONFIG_ARCH_EMU_DARWIN
   desc Target system is Darwin (MacOS X)
   parent CONFIG_ARCH_EMU
+  exclude CONFIG_ARCH_SMP
 %config end
 
 %config CONFIG_ARCH_EMU_LINUX
