--- a/examples/common/platforms-emu.conf
+++ b/examples/common/platforms-emu.conf
@@ -6,27 +6,32 @@
 
   CONFIG_ARCH_EMU
 
-#  CONFIG_ARCH_SMP
-#  CONFIG_CPU_MAXCOUNT 4
-
   CONFIG_ARCH_HW_INIT
   CONFIG_DRIVER_CHAR_EMUTTY
   CONFIG_CPU_RESET_HANDLER undefined
+  CONFIG_COMPILE_SOFTFLOAT undefined
+
+  %subsection emusmp
+    CONFIG_CPU_MAXCOUNT 4
+  %end
 
   #################################################
   # Host OS
 
   %subsection emu-linux-*
     %types host_os
-  
+
+    %notice You may use BUILD=$(CONFIGSECTION):emusmp to enable emu SMP support
+
     CONFIG_ARCH_EMU_LINUX
   %end
   
   %subsection emu-darwin-*
     %types host_os
+
+    %notice No SMP support available on Darwin emu
   
     CONFIG_ARCH_EMU_DARWIN
-    CONFIG_ARCH_SMP undefined
   %end
   
   #################################################
