upgraded to new libtermui

--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -4,6 +4,14 @@
   flags root
   module libtermui Terminal driver library
   provide CONFIG_LICENSE_USE_GPL
+  require CONFIG_LIBTERMUI_IOHEADER
+%config end
+
+%config CONFIG_LIBTERMUI_IOHEADER
+  desc libtermui io operations header file name
+  flags value nodefine
+  default "termio_dev_pv.h"
+  parent CONFIG_LIBTERMUI
 %config end
 
 %config CONFIG_LIBTERMUI_GETLINE
@@ -43,18 +51,21 @@
 %config end
 
 %config CONFIG_LIBTERMUI_CON_MAXCMDLEN
+  desc Console max command token len
   default 16
   parent CONFIG_LIBTERMUI_CONSOLE
   flags value
 %config end
 
 %config CONFIG_LIBTERMUI_CON_MAXCOMPLETE
+  desc Console completion max candidates count
   default 512
   parent CONFIG_LIBTERMUI_CONSOLE
   flags value
 %config end
 
 %config CONFIG_LIBTERMUI_CON_MAXLINELEN
+  desc Console line buffer size
   default 512
   parent CONFIG_LIBTERMUI_CONSOLE
   flags value
